infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiki
  labels:
    name: wiki
    app.kubernetes.io/part-of: sre-atlas
